add credits page + update links

--- a/css/style.css
+++ b/css/style.css
@@ -525,3 +525,8 @@ tr {
 .table-bordered td {
     border: 1px solid #0C243C !important;
 }
+
+.figure-caption {
+    font-size: .875em;
+    color: #aaaaaa;
+  }
